@@ -5,6 +5,12 @@ filebeat:
       - /var/log/hello1.log
       - /var/log/hello2.log
     index: logs-generic-default
+    processors:
+      - add_fields:
+          fields:
+            stream.type: logs
+            stream.dataset: generic
+            stream.namespace: default
 output:
   elasticsearch:
     hosts:
