@@ -26,3 +26,4 @@
 - Support for config constraints {pull}17112[17112]
 - Introduced `mage demo` command {pull}17312[17312]
 - Display the stability of the agent at enroll and start.  {pull}17336[17336]
+- Expose stream.* variables in events {pull}17468[17468]
